--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "@rollup/plugin-node-resolve": "^9.0.0",
     "@rollup/plugin-replace": "^2.3.3",
     "@rollup/plugin-strip": "^2.0.0",
+    "@rollup/plugin-typescript": "^6.1.0",
     "@rollup/plugin-yaml": "^2.1.0",
     "@rollup/pluginutils": "^4.0.0",
+    "@tsconfig/svelte": "^1.0.10",
     "autoprefixer": "9.8.6",
     "htmlnano": "^0.2.4",
     "node-sass": "^4.12.0",
@@ -24,14 +26,16 @@
     "rimraf": "^3.0.0",
     "rollup": "^2.21.0",
     "rollup-plugin-babel": "^4.3.3",
+    "rollup-plugin-copy": "^3.3.0",
     "rollup-plugin-livereload": "^2.0.0",
     "rollup-plugin-postcss": "^3.1.2",
     "rollup-plugin-serve": "^1.0.1",
     "rollup-plugin-svelte": "^6.0.1",
     "rollup-plugin-terser": "^7.0.2",
     "svelte": "^3.24.0",
+    "svelte-check": "^1.1.6",
     "svelte-preprocess": "^4.0.7",
-    "rollup-plugin-copy": "^3.3.0"
+    "typescript": "^4.0.5"
   },
   "scripts": {
     "dev": "rollup -cw",
