--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "svelte": "^3.24.0",
     "svelte-check": "^1.1.6",
     "svelte-preprocess": "^4.0.7",
+    "tslib": "^2.0.3",
     "typescript": "^4.0.5"
   },
   "scripts": {
@@ -42,6 +43,5 @@
     "build": "rimraf build && rollup -c",
     "postbuild": "node postbuild.js"
   },
-  "dependencies": {
-  }
+  "dependencies": {}
 }
