--- a/src/representation.yaml
+++ b/src/representation.yaml
@@ -1,46 +1,21 @@
-shield1:
-  fields:
-    - symbol: vertical-split
-      fields:
-        - background: red
-          symbol:
-            type: lion
-            pose: rampant
-            clawed: true
-            tongue: true
+# From generator:
+Shield:
+  division:
+    type: string
+    props?: Object
+  fields: # An array of fields
+    - symbol: string
+      color: Tincture
+      background: Tincture
 
-        - background: red
-          symbol:
-            type: stripes
-            direction: horizontal
-            color: silver
-
-shield2:
-  fields:
-    - background: red
-      symbol:
-        type: crown
-        color: gold
-
-shield3:
-  field:
-    symbol:
-      symbol: 'lion'
-      properties:
-        # ...
-    background:
-      Metal.gold
-
-interface Symbol {
-  symbol: string,
-  properties: object,
-}
-
-interface SymbolField {
-  symbol: Symbol,
-  background: Background
-}
-
-interface Shield {
-  field: Field,
-}
+# In renderer:
+Shield:
+  shape:
+    # Parameters to the shape of the shield
+    # These global params in turn affect how the divisions are drawn
+    # The symbols are placed based on local logic in the division components.
+    alpha: number
+    beta: number
+    theta: number
+  division: # Same as above
+  fields: # Same as above
