--- a/package.json
+++ b/package.json
@@ -38,7 +38,5 @@
     "build": "rimraf build && rollup -c",
     "postbuild": "node postbuild.js"
   },
-  "dependencies": {
-    "bezier-js": "^3.1.0"
-  }
+  "dependencies": {}
 }
